Set bigger heap also for it tests